# license-scanner-discord-bot

./: .env-example  .gitignore  Dockerfile  alembic.ini  database.py  entrypoint.sh  main.py  plate_recognizer.py  pyproject.toml
.github/workflows/: deploy.yml
infra/terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup
migrations/: env.py
migrations/versions/: 4c8e1b851cae_update_the_table.py  6c19a958a641_auto.py  6d3a0113cf3e_create_message_table.py  a16d45db5335_update_the_foreign_keys.py  bd12a13f16d6_create_message_loaded_table.py
models/: message.py
